2021-08-04  Antti Koivisto  <antti@apple.com>

        Reduce Vector<> wasted capacity in some RuleSet code
        https://bugs.webkit.org/show_bug.cgi?id=224160
        <rdar://problem/76369555>

        Unreviewed, reverting revert r279242.

        Reland as this was not related to the crashes seen.

        * style/RuleSet.cpp:
        (WebCore::Style::RuleSet::addRulesFromSheet):
        (WebCore::Style::RuleSet::evaluateDynamicMediaQueryRules):
        (WebCore::Style::shrinkDynamicRules):
        (WebCore::Style::RuleSet::shrinkToFit):
        * style/RuleSet.h:

2021-08-04  Andres Gonzalez  <andresg_22@apple.com>

        Add support for aria-selected value changes in table cells.
        https://bugs.webkit.org/show_bug.cgi?id=228756
        <rdar://problem/81483071>

        Reviewed by Chris Fleizach.

        Test: accessibility/selected-state-changed-notifications.html

        - Added the AXSelectedStateChangedNotification to notify AX clients that
        the selected state of an object has changed.
        - This notification is used in this patch for aria-selected value
        changes in table cells.

        * accessibility/AXLogger.cpp:
        (WebCore::operator<<):
        * accessibility/AXObjectCache.cpp:
        (WebCore::AXObjectCache::selectedStateChanged):
        (WebCore::AXObjectCache::handleAttributeChange):
        * accessibility/AXObjectCache.h:
        * accessibility/ios/AXObjectCacheIOS.mm:
        (WebCore::AXObjectCache::notificationPlatformName):
        * accessibility/mac/AXObjectCacheMac.mm:
        (WebCore::AXObjectCache::postPlatformNotification):

2021-08-04  Martin Robinson  <mrobinson@webkit.org>

        Add a HashTraits implementation for LayoutUnit
        https://bugs.webkit.org/show_bug.cgi?id=228630

        Reviewed by Fujii Hironori.

        No new tests. This should not change behavior in an easily-observable way, but
        could prevent rare hashing problems in the future.
