@@ -25,7 +25,6 @@
 #include <wtf/Forward.h>
 #include <wtf/HashMap.h>
 #include <wtf/HashSet.h>
-#include <wtf/SystemMalloc.h>
 #include <wtf/text/AtomString.h>
 #include <wtf/text/AtomStringHash.h>
 
@@ -39,13 +38,6 @@ class RuleData;
 
 enum class MatchElement : uint8_t { Subject, Parent, Ancestor, DirectSibling, IndirectSibling, AnySibling, ParentSibling, AncestorSibling, Host };
 constexpr unsigned matchElementCount = static_cast<unsigned>(MatchElement::Host) + 1;
-
-#if HAVE(PROBABILISTIC_GUARD_MALLOC)
-// Help finding rdar://77450900
-using RuleMalloc = ProbabilisticGuardMalloc;
-#else
-using RuleMalloc = FastMalloc;
-#endif
 
 struct RuleFeature {
     RuleFeature(const RuleData&, std::optional<MatchElement> = std::nullopt);
@@ -66,7 +58,7 @@ struct RuleFeatureWithInvalidationSelector : public RuleFeature {
     const CSSSelector* invalidationSelector { nullptr };
 };
 
-using RuleFeatureVector = Vector<RuleFeature, 0, CrashOnOverflow, 16, RuleMalloc>;
+using RuleFeatureVector = Vector<RuleFeature>;
 
 struct RuleFeatureSet {
     void add(const RuleFeatureSet&);
